# TPs-TallerDeProgramacion

./: README.md
TP2/: CMakeLists.txt  Cliente.cpp  Cliente.h  Juego.cpp  Juego.h  JuegoProtected.cpp  JuegoProtected.h  Partida.cpp  Partida.h  Protocolo.cpp  Protocolo.h  Resolver.cpp  Resolver.h  Servidor.cpp  Servidor.h  Socket.cpp  Socket.h  ThreadCliente.cpp  makefile  serverMain.cpp
TP2-Old/: Protocolo.cpp  Resolver.cpp  Servidor.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  ThreadAceptador.cpp  ThreadAceptador.h  ThreadCliente.h  clienteMain.cpp
sockets-2023c2-AbrahamOsco-main/: README.md  client_cliente.cpp  client_cliente.h  client_inputParser.cpp  client_inputParser.h  client_main.cpp  common_operacionDTO.cpp  common_operacionDTO.h  common_protocolo.cpp  common_protocolo.h  common_respuestaDTO.cpp  common_respuestaDTO.h  common_socket.cpp  common_socket.h  server_archivoEscenario.cpp  server_archivoEscenario.h  server_celda.cpp  server_celda.h  server_gusano.cpp  server_gusano.h  server_juego.cpp  server_juego.h  server_main.cpp  server_posicion.cpp  server_posicion.h  server_server.cpp  server_server.h  server_terreno.cpp  server_terreno.h
threads-2023c2-AbrahamOsco-main/: README.md  client_client.cpp  client_client.h  client_inputParser.cpp  client_inputParser.h  client_main.cpp  common_actionDTO.cpp  common_actionDTO.h  common_answerDTO.cpp  common_answerDTO.h  common_clientProtocol.cpp  common_clientProtocol.h  common_protocol.cpp  common_protocol.h  common_serverProtocol.cpp  common_serverProtocol.h  common_wrap_socket.cpp  server_MapQueuesProtected.h  (+14 more)
(+65 files in other folders)
